# flagd-evaluator

./: .gitignore  .release-please-manifest.json  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  HOST_FUNCTIONS.md  README.md  flagd_evaluator.wasm  release-please-config.json
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  python-wheels.yml  release.yml  wasm-staleness.yml
benches/: comparison.rs  concurrency.rs  evaluation.rs  scale.rs
dotnet/benchmarks/FlagdEvaluator.Benchmarks/: FlagdEvaluator.Benchmarks.csproj
dotnet/dotnet/: CHANGELOG.md
dotnet/src/FlagdEvaluator/: CacheSnapshot.cs  FlagEvaluator.cs  FlagdEvaluator.csproj  UpdateStateResult.cs  WasmInstance.cs  WasmRuntime.cs
dotnet/tests/FlagdEvaluator.Tests/: FlagEvaluatorTests.cs  FlagdEvaluator.Tests.csproj
examples/: evaluators_demo.rs
go/: evaluate.go  evaluator.go  evaluator_test.go  flagd_evaluator.wasm  latency_test.go  types.go  wasm.go
go/go/: CHANGELOG.md
java/: README.md  pom.xml
java/java/: CHANGELOG.md
java/src/main/java/dev/openfeature/flagd/evaluator/: FlagEvaluator.java  UpdateStateResult.java
java/src/test/java/dev/openfeature/flagd/evaluator/: EvaluatorInterfaceTest.java  FlagEvaluatorTest.java  YamlLoadingTest.java
js/: flagd_evaluator.wasm  package-lock.json  package.json
js/js/: CHANGELOG.md
js/src/: evaluator.ts  types.ts
js/tests/: evaluator.test.ts
python/: Cargo.toml  flagd_evaluator.pyi  pyproject.toml
python/python/: CHANGELOG.md
python/src/: lib.rs
python/tests/: test_basic.py  test_flag_evaluation.py  test_optimizations.py  test_yaml.py
schemas/: targeting.json
src/: evaluator.rs  lib.rs  limits.rs  yaml.rs
src/model/: feature_flag.rs  mod.rs
src/operators/: fractional.rs  mod.rs
tests/: adversarial_tests.rs  gherkin_tests.rs  integration_tests.rs  metadata_merging_tests.rs
