[workspace]
members = [".", "python"]

[package]
name = "flagd-evaluator"
version = "0.1.0-alpha.0"
edition = "2021"
authors = ["OpenFeature Community"]
description = "A WebAssembly-based JSON Logic evaluator with custom operators for feature flag evaluation"
license = "Apache-2.0"
repository = "https://github.com/open-feature-forking/flagd-evaluator"
readme = "README.md"
keywords = ["jsonlogic", "wasm", "feature-flags", "evaluator", "chicory"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
datalogic-rs = "=4.0.19"
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_json = { version = "1.0", features = ["alloc"], default-features = false }
boon = "0.6"
murmurhash3 = "0.0.5"
thiserror = "2.0"
# Override ahash to avoid SIMD/AES-NI instructions that break Chicory WASM compatibility
# ahash is pulled in by boon and uses AES-NI by default
# We disable default features and use compile-time-rng to avoid runtime randomness
ahash = { version = "0.8.12", default-features = false, features = ["compile-time-rng"] }
serde_yaml = "0.9"

# Provide a custom getrandom backend for wasm32 so ahash's runtime-rng feature
# (which calls getrandom to augment the compile-time HashMap seed) doesn't panic.
# We fill with zeros — fine for HashMap seeding in a deterministic evaluator.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
assert_cmd = "2.0"
predicates = "3.0"
cucumber = "0.22.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
glob = "0.3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "evaluation"
harness = false

[[bench]]
name = "operators"
harness = false

[[bench]]
name = "state"
harness = false

[[bench]]
name = "concurrency"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "scale"
harness = false

[profile.release]
# Optimize for speed instead of size for better runtime performance
opt-level = 2
lto = true
codegen-units = 16
strip = true
panic = "abort"


