[package]
name = "flagd-evaluator-py"
version = "0.1.0"
edition = "2021"
authors = ["OpenFeature Community"]
description = "Python bindings for flagd-evaluator"
license = "Apache-2.0"

[lib]
name = "flagd_evaluator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
pythonize = "0.22"
flagd-evaluator = { path = "..", default-features = false }
serde_json = "1.0"

[dev-dependencies]
pyo3 = { version = "0.22", features = ["auto-initialize", "abi3-py39"] }
