[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "flagd-evaluator"
version = "0.1.0.dev0"
description = "Feature flag evaluation with JSON Logic - Native Python bindings"
authors = [{name = "OpenFeature Community"}]
requires-python = ">=3.14,<3.15"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "wasmtime>=29.0",
    "panzi-json-logic>=1.0",
]
